# avro-fastavro-poc

./: .gitignore  README.md  pyproject.toml
src/: main.py
tests/: test_roundtrip.py
wheels/: avro-1.12.1-py2.py3-none-any.whl  fastavro-1.12.1-cp39-cp39-manylinux2014_x86_64.manylinux_2_17_x86_64.manylinux_2_28_x86_64.whl
